--- a/SFDL.NET 3/packages.config
+++ b/SFDL.NET 3/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
-  <package id="morelinq" version="2.8.0" targetFramework="net452" />
+  <package id="MahApps.Metro.SimpleChildWindow" version="1.4.1" targetFramework="net452" />
+  <package id="morelinq" version="2.9.0" targetFramework="net452" />
   <package id="NLog" version="4.4.12" targetFramework="net452" />
   <package id="SmartThreadPool.dll" version="2.2.4" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
