--- a/SFDL.NET 3/packages.config
+++ b/SFDL.NET 3/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.6.2" targetFramework="net452" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.6.3" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
   <package id="morelinq" version="2.10.0" targetFramework="net452" />
-  <package id="NLog" version="4.5.3" targetFramework="net452" />
+  <package id="NLog" version="4.5.4" targetFramework="net452" />
   <package id="SmartThreadPool.dll" version="2.2.4" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net452" />
 </packages>
