Download Folder prompt is now remebering your last path you selected

--- a/SFDL.NET 3/App.config
+++ b/SFDL.NET 3/App.config
@@ -32,6 +32,9 @@
       <setting name="UserWindowState" serializeAs="String">
         <value>Normal</value>
       </setting>
+      <setting name="UserRecentFolderPath" serializeAs="String">
+        <value />
+      </setting>
     </SFDL.NET3.MySettings>
   </userSettings>
 </configuration>
