--- a/SFDL.NET 3/My Project/Settings.settings
+++ b/SFDL.NET 3/My Project/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="UserWindowState" Type="System.Windows.WindowState" Scope="User">
       <Value Profile="(Default)">Normal</Value>
     </Setting>
+    <Setting Name="UserRecentFolderPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
