--- a/SFDL.NET 3/packages.config
+++ b/SFDL.NET 3/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net462" />
+  <package id="FamFamFam.Flags.Wpf" version="1.2.1" targetFramework="net462" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net462" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net462" />
