--- a/SFDL.NET 3/packages.config
+++ b/SFDL.NET 3/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net462" />
+  <package id="ControlzEx" version="4.3.2" targetFramework="net462" />
   <package id="FamFamFam.Flags.Wpf" version="1.2.1" targetFramework="net462" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net452" />
-  <package id="MahApps.Metro" version="1.6.5" targetFramework="net462" />
-  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net462" />
+  <package id="MahApps.Metro" version="2.1.1" targetFramework="net462" />
+  <package id="MahApps.Metro.IconPacks.Modern" version="4.4.0" targetFramework="net462" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net462" />
   <package id="morelinq" version="3.3.2" targetFramework="net462" />
-  <package id="NLog" version="4.6.8" targetFramework="net462" />
+  <package id="NLog" version="4.7.3" targetFramework="net462" />
   <package id="SmartThreadPool.dll" version="2.2.6" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
